# etool-v2.2.0-gui-upgrade

./: .gitignore  GUI_BEFORE_AFTER_COMPARISON.md  GUI_UPGRADE_COMPLETE.md  GUI_UPGRADE_IMPLEMENTATION.md  GUI_UPGRADE_IMPLEMENTATION_REPORT.md  LICENSE.md  MIGRATION_SUMMARY_v3.0.0.md  PROJECT_COMPLETION_REPORT.md  README.md  README_GUI_UPGRADE.md  UI.txt  main_ui.py
unlock_tool/: ANDROID_ADMIN_APK_PROJECT.txt  BUILD_SUMMARY.txt  GUI_FEATURES.md  MIGRATION_GUIDE.md  README.md  backup_licenses.txt  build.spec  build_linux.sh  build_windows.bat  build_windows.spec  index.html  main.py  mediatek_brom_sample.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  revoke_server_stub.py  run-portable.bat  run-portable.sh  run.bat  run.sh  run_tests.bat  run_tests.sh  setup.bat  setup.sh  tailwind.config.ts  test_license.py  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
unlock_tool/android_admin_apk/: build.gradle  settings.gradle
unlock_tool/core/: adb_interface.py  config.py  device_detector.py  device_modes.py  device_profiles.py  driver_manager.py  exploit_manager.py  fastboot_interface.py  ios_manager.py  license_manager.py  logger.py  platform_tools.py  progress_parser.py  safe_operations.py  security_advisor.py  updater.py  usb_manager.py  version.py
unlock_tool/database/: devices.json
unlock_tool/gui/: COMPONENTS_GUIDE.md  README.md  bottom_tools.py  device_panel.py  main_window.py  main_window_enhanced.py  main_window_integrated.py  theme_manager.py
unlock_tool/scripts/: driver_support_report.py  generate_license.py  (+5 more)
(+104 files in other folders)
